--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -1,1 +1,49 @@
+name: Fabric Operator CI
 
+on:
+  push:
+    branches:
+    - main
+  pull_request:
+    branches:
+    - main
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        fabric: ['2.2.3', '2.3', '2.3.2', '2.4']
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: 'Build up the minifabric container'
+        run: make docker-build IMG=email4tong/fabricop:v1.0.0
+
+  dockerhub:
+    name: Docker
+    needs: build
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' }}
+
+    steps:
+    - name: Checkout sources
+      uses: actions/checkout@v2
+      
+    - run: make docker-build IMG=email4tong/fabricop:v1.0.0
+ 
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DH_USER }}
+        password: ${{ secrets.DH_KEY }}
+ 
+    - run: docker push IMG=email4tong/fabricop:v1.0.0
