--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: 'Build up the minifabric container'
+      - name: 'Build Fabric operator container image'
         run: make docker-build IMG=email4tong/fabricop:v1.0.0
 
   dockerhub:
@@ -46,4 +46,4 @@ jobs:
         username: ${{ secrets.DH_USER }}
         password: ${{ secrets.DH_KEY }}
  
-    - run: docker push IMG=email4tong/fabricop:v1.0.0
+    - run: docker push email4tong/fabricop:v1.0.0
