Fixed the host url issue in the asset file
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/agent/ops/assetgen/gen-console-asset.yml
+++ b/roles/agent/ops/assetgen/gen-console-asset.yml
@@ -1,1 +1,4 @@
-# Do nothing for console
+# Simply set up host url for other part of the code to use
+- name: Get host url from the console node
+  set_fact:
+    CONSOLE_URL: "{{ anode.status.endpoint | default('https://localhost:3000') }}"
