--- a/config/samples/operator_v1alpha1_nodecert.yaml
+++ b/config/samples/operator_v1alpha1_nodecert.yaml
@@ -1,9 +1,9 @@
 apiVersion: operator.fabric.hyperledger.org/v1alpha1
 kind: Nodecert
 metadata:
-  name: test-sample
+  name: ca-sample
 spec:
   # Add fields here
   organization: example.com
-  nodeType: Console
+  nodeType: CA
 
