--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        fabric: ['2.2.3', '2.3', '2.3.2', '2.4']
+        fabric: ['2.2.3', '2.4']
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -40,6 +40,10 @@ jobs:
       
     - run: make docker-build IMG=email4tong/fabricop:v1.0.0
  
+    - run: |
+        cd utilities/chaincode/simple
+        docker build -t email4tong/simple:v1.0.0
+
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
@@ -47,3 +51,4 @@ jobs:
         password: ${{ secrets.DH_KEY }}
  
     - run: docker push email4tong/fabricop:v1.0.0
+    - run: docker push email4tong/simple:v1.0.0
