--- a/config/samples/operator_v1alpha1_chaincode.yaml
+++ b/config/samples/operator_v1alpha1_chaincode.yaml
@@ -3,5 +3,9 @@ kind: Chaincode
 metadata:
   name: chaincode-sample
 spec:
-  # Add fields here
-  foo: bar
+  organization: example.com
+  nodeCert:
+  release: 2.3.2
+  image: email4tong/simple:v1.0.0
+  ccid: testid
+  logLevel: ERROR
