--- a/roles/chaincode/defaults/main.yml
+++ b/roles/chaincode/defaults/main.yml
@@ -1,2 +1,10 @@
 ---
 # defaults file for Chaincode
+organization:
+nodeCert:
+release: 2.3.2
+image:
+ccid:
+port: 7090
+# chaincode logging level.
+logLevel: ERROR
