--- a/utilities/launcher/bin/release.yml
+++ b/utilities/launcher/bin/release.yml
@@ -7,17 +7,45 @@
       debug:
         msg: 'Running RELEASE'
 
-    - name: Search for the matching secret of the CA organization
-      community.kubernetes.k8s_info:
-        kind: Secret
-      register: secret
+    - name: Load metadata.json
+      set_fact:
+        cmetadata: "{{ lookup('file', CHAINCODE_METADATA_DIR + '/metadata.json') | from_json }}"
+        peername: "{{ lookup('env', 'PEER_OPERATOR_NAME') }}"
+        peerorg: "{{ lookup('env', 'PEER_OPERATOR_ORG') }}"
+        peernamespace: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/namespace') }}"
 
-    - name: Show the results
-      debug:
-        var: secrets
+    - name: Setup chaincode name
+      set_fact:
+        ccname: "{{ (cmetadata.label+'-'+peername+'-'+peerorg)|replace('.', '-') }}"
+
+    - name: Create chaincode
+      community.kubernetes.k8s:
+        definition:
+          kind: Chaincode
+          apiVersion: operator.fabric.hyperledger.org/v1alpha1
+          metadata:
+            name: '{{ ccname }}'
+            namespace: '{{ peernamespace }}'
+          spec:
+            organization: '{{ peerorg }}'
+            image: "{{ cmetadata.path }}/{{ cmetadata.label|replace('_', ':') }}"
+            ccid: "{{ cmetadata.label }}"
+            port: 7090
 
     - name: Create the chaincode/server directory for connection.json
       file:
         path: '{{ RELEASE_OUTPUT_DIR }}/chaincode/server'
         state: 'directory'
         mode: 0775
+
+    - name: Create the connection file
+      copy:
+        dest: "{{ RELEASE_OUTPUT_DIR }}/chaincode/server/connection.json"
+        content: >-
+          {{ {"address": ccname+"."+peernamespace+":7090",
+              "dial_timeout": "10s",
+              "tls_required": false,
+              "client_auth_required": false,
+              "client_key": "",
+              "client_cert": "",
+              "root_cert": ""} | to_nice_json(indent=2) }}
