Fixed the rbac issue
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/deploy/fabric_operator.yaml
+++ b/deploy/fabric_operator.yaml
@@ -377,6 +377,7 @@ rules:
   - events
   - configmaps
   - namespaces
+  - serviceaccounts
   verbs:
   - create
   - delete
@@ -400,6 +401,20 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - roles
+  - rolebindings
+  verbs:
+  - create
+  - bind
+  - get
+  - list
+  - watch
+  - delete
+  - update
+  - patch
 - apiGroups:
   - networking.istio.io
   resources:
