improved the test script
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,19 +42,20 @@ jobs:
       - name: Deploy the nginx ingress controller
         run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.48.1/deploy/static/provider/cloud/deploy.yaml
 
+      - name: Find kind command
+        run: which kind
+
       - name: Wait for the controller to have the external IP
         run: |
-          while : ; do
+          for ((x=0;x<30;x++)); do
             ENDPOINT=$(kubectl get -n ingress-nginx service/ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress}')
+            echo $ENDPOINT
             if [[ ! -z $ENDPOINT ]]; then
               break
             fi
             echo -e ${Green}Waiting${ColorOff} for Nginx Ingress Controller to be ready...
-            sleep 3
+            sleep 5
           done
-
-      - name: Find kind command
-        run: which kind
 
       - name: Deploy Fabric Operator Controller
         run: kubectl apply -f deploy/fabric_operator.yaml
