Added the customized plugin
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
-[defaults]
+[default]
+ansible_python_interpreter = /usr/bin/python3
 command_warnings = False
 deprecation_warnings = False
 display_skipped_hosts = False
-stdout_callback = skippy
+stdout_callback = minifab
