Fixed missing grpcwp url and private key type error
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/nodecert/tasks/one-cert.yml
+++ b/roles/nodecert/tasks/one-cert.yml
@@ -32,6 +32,7 @@
   community.crypto.openssl_privatekey:
     path: "{{ certdir }}/{{ partyid }}-key.pem"
     curve: secp256r1
+    format: pkcs8
     type: ECC
 
 - name: Process CA
