Fixed the following issues
1. The securityContext needs to be set for initContainer of peer node
2. When download the binary, the group id of the downloaded file need
   to match the container user group
3. CA asset file node name should include organization name

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/peer/tasks/main.yml
+++ b/roles/peer/tasks/main.yml
@@ -170,6 +170,10 @@
             - name: setup
               image: 'email4tong/fabricop:v1.0.0'
               imagePullPolicy: Always
+              securityContext:
+                runAsUser: 1001
+                runAsGroup: 1001
+                fsGroup: 1001
               command:
               - sh
               - "-c"
