allow asset gen to be selective
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent_assetgen.yaml
+++ b/config/samples/operator_v1alpha1_agent_assetgen.yaml
@@ -10,3 +10,8 @@ spec:
   - name: assetgen
     description: Generate asset file
     params:
+    - name: assettypes
+      value: ['ca', 'orderer', 'peer']
+    - name: includewallets
+      value: no
+
