--- a/roles/agent/ops/assetgen/gen-orderer-asset.yml
+++ b/roles/agent/ops/assetgen/gen-orderer-asset.yml
@@ -29,3 +29,4 @@
   template:
     src: "{{ role_path }}/ops/{{ action.name }}/templates/wallet.j2"
     dest: "{{ workdir }}/{{ orgid }}/assets/Wallets/Admin-{{ assetname }}.json"
+  when: includewallets == True
