Added unzip to fix an issue with zipped asset file
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent_nodeimport.yaml
+++ b/config/samples/operator_v1alpha1_agent_nodeimport.yaml
@@ -11,4 +11,4 @@ spec:
     description: import nodes and their certificates
     params:
     - name: assetname
-      value: myasset.tar.gz
+      value: assets.zip
